just test home page

--- a/Endpoint.Site/wwwroot/css/site.css
+++ b/Endpoint.Site/wwwroot/css/site.css
@@ -1,71 +1,103 @@
-﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
-for details on configuring this project to bundle and minify static web assets. */
-
-a.navbar-brand {
-  white-space: normal;
-  text-align: center;
-  word-break: break-all;
+﻿*{
+  padding: 0;margin: 0;
+  box-sizing: border-box;
 }
-
-/* Provide sufficient contrast against white background */
-a {
-  color: #0366d6;
+body{
+  font-family: Tahoma, sans-serif;
+  font-size: 15px;
 }
-
-.btn-primary {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+a{
+  text-decoration: none;
 }
-
-.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
-}
-
-/* Sticky footer styles
--------------------------------------------------- */
-html {
-  font-size: 14px;
-}
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
-}
-
-.border-top {
-  border-top: 1px solid #e5e5e5;
-}
-.border-bottom {
-  border-bottom: 1px solid #e5e5e5;
-}
-
-.box-shadow {
-  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
-}
-
-button.accept-policy {
-  font-size: 1rem;
-  line-height: inherit;
-}
-
-/* Sticky footer styles
--------------------------------------------------- */
-html {
+header{
   position: relative;
-  min-height: 100%;
+  display: flex;
+  justify-content: space-between;
+  padding: 25px;
 }
 
-body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
+nav li{
+  list-style-type: none;
+  
 }
-.footer {
-  position: absolute;
-  bottom: 0;
+nav ul{
+  display: flex;
+}
+.d-flex {
+  display: flex;
+}
+.btn-header{
+  margin: 15px;
+  align-items: center;
+}
+/* buttom in header css */
+.btn-header button{
+  border: none;
+  padding: 15px 35px;
+  border-radius: 10px;
+  background-color: lightcoral;
+  font-size: 18px;
+  font-weight:600;
+}
+.btn-header button a{
+  color: white;
+}
+.btn-header button a:hover{
+  cursor: pointer;
+  color: black;
+  transition: color 0.5s;
+}
+/* finish style button header */
+
+/* menue item header */
+.menue{
+  margin: 20px;
+  font-size: 18px;
+  font-weight: 600;
+}
+.menue ul li a {
+  padding: 35px;
+  color: black;
+}
+.menue a:hover{
+  color: green;
+  border-bottom: 1px solid blue ;
+}
+
+/* slider */
+.slider{
   width: 100%;
-  white-space: nowrap;
-  line-height: 60px; /* Vertically center the text there */
+  margin:auto;
+  position: relative;
+  overflow:hidden ;
+}
+.slide img {
+  width: 100%;
+  height: 80vh;
+  
+}
+.slide{
+  display: none;
+}
+.slide.active{
+  display: block;
+}
+.dots.active{
+  display: block;
+}
+
+.prev,.next{
+  color: black;
+  text-decoration: none;
+  font-size: 100px;
+  position: absolute;
+  top: 50%;
+  transform: translate(0,-50%);
+
+}
+.prev{
+  left: 5px;
+}
+.next{
+  right: 5px;
 }
