Adding js for POST users(must add DateOfBirth and ParentPhone),unique Username and email

--- a/Endpoint.Site/Areas/Admin/Views/Users/Create.cshtml
+++ b/Endpoint.Site/Areas/Admin/Views/Users/Create.cshtml
@@ -26,21 +26,21 @@
                                     <div class="col-xl-4 col-lg-6 col-md-12 mb-1">
                                         <fieldset class="form-group">
                                             <label for="basicInput">نام و نام خانوادگی</label>
-                                            <input type="text" class="form-control" id="basicInput">
+                                            <input type="text" class="form-control" id="fullname">
                                         </fieldset>
                                     </div>
                                     <div class="col-xl-4 col-lg-6 col-md-12 mb-1">
                                         <fieldset class="form-group">
                                             <label for="helpInputTop">پست الکترونیک</label>
                                             <small class="text-muted"><i>info@gmail.com</i></small>
-                                            <input type="text" class="form-control" id="helpInputTop">
+                                            <input type="text" class="form-control" id="email">
                                         </fieldset>
                                     </div>
 
                                     <div class="col-xl-4 col-lg-6 col-md-12 mb-1">
                                         <fieldset class="form-group">
                                             <label for="basicSelect">نقش</label>
-                                            <select class="form-control" id="Role" name="Role" asp-items="@ViewBag.Roles">
+                                            <select class="form-control" id="RoleId" name="Role" asp-items="@ViewBag.Roles">
                                             </select>
                                             <p><small class="text-muted">سطح دسترسی کاربر مورد نظر را تعیین کنید</small></p>
 
@@ -50,34 +50,40 @@
                                     <div class="col-xl-4 col-lg-6 col-md-12 mb-1">
                                         <fieldset class="form-group">
                                             <label for="basicInput">نام کاربری</label>
-                                            <input type="text" class="form-control" id="basicInput">
+                                            <input type="text" class="form-control" id="Username">
                                         </fieldset>
                                     </div>
                                     <div class="col-xl-4 col-lg-6 col-md-12 mb-1">
                                         <fieldset class="form-group">
                                             <label for="basicInput">تلفن همراه</label>
-                                            <input type="tel" class="form-control" id="basicInput" placeholder="مانند : 09123456789">
+                                            <input type="tel" class="form-control" id="Phone" placeholder="مانند : 09123456789">
                                         </fieldset>
                                     </div>
+                                    @*<div class="col-xl-4 col-lg-6 col-md-12 mb-1">
+                                        <fieldset class="form-group">
+                                            <label for="basicInput">تاریخ تولد</label>
+                                            <input type="datetime-local" class="form-control" id="Date">
+                                        </fieldset>
+                                    </div>*@
 
 
                                     <div class="col-xl-4 col-lg-6 col-md-12 mb-1">
                                         <fieldset class="form-group">
                                             <label for="disabledInput">رمز عبور</label>
-                                            <input type="password" class="form-control" id="disabledInput">
+                                            <input type="password" class="form-control" id="Password">
                                         </fieldset>
                                     </div>
                                     <div class="col-xl-4 col-lg-6 col-md-12 mb-1">
                                         <fieldset class="form-group">
                                             <label for="disabledInput">تکرار رمز عبور</label>
-                                            <input type="password" class="form-control" id="readonlyInput">
+                                            <input type="password" class="form-control" id="RePassword">
                                         </fieldset>
                                     </div>
 
                                     <div class="col-xl-12 col-lg-12 col-md-12 mb-1">
                                         <fieldset class="form-group">
                                             <br />
-                                            <button class="btn btn-success col-md-12">تکمیل ثبت نام </button>
+                                            <a onclick="Registeruser()" class=" btn bar-success" col-md-12>تکمیل ثبت نام</a>
                                         </fieldset>
                                     </div>
                                 </div>
@@ -89,4 +95,72 @@
         </div>
     </div>
 </section>
+
+@section Scripts
+{
+    <link href="~/Sweetalert2/sweetalert2.min.css" rel="stylesheet" />
+    <script src="~/Sweetalert2/sweetalert2.min.js"></script>
+
+    <script>
+        function Registeruser() {
+            swal.fire({
+                title: 'ثبت نام کاربر',
+                text: 'آیا میخواهید ثبت نام کاربر را انجام دهید؟',
+                icon: 'info',
+                showCancelButton: true,
+                confirmButtonColor: '#3085d6',
+                confirmButtonText: 'بله ثبت نام انجام شود',
+                cancelButtonText: 'خیر'
+            }).then((result) => {
+                var fullname = $("#fullname").val();
+                var email = $("#email").val();
+                var RoleId = $("#RoleId").val();
+                var Username = $("#Username").val();
+                var Phone = $("#Phone").val();
+                var Password = $("#Password").val();
+                var RePassword = $("#RePassword").val();
+
+                var postData = {
+                    'fullname': fullname,
+                    'email': email,
+                    'RoleId': RoleId,
+                    'Username': Username,
+                    'Phone': Phone,
+                    'Password': Password,
+                    'RePassword': RePassword,
+                };
+                $.ajax({
+                    contentType: 'aplication/x-www-form-urlencoded',
+                    dataType: 'json',
+                    type: "POST",
+                    url: "Create",
+                    data: postData,
+                    success: function (data) {
+                        if (data.isSuccess == true) {
+                            swal.fire(
+                                'موفق!',
+                                data.message,
+                                'success'
+                            ).then(function (isConfirm) {
+                                location.reload();
+                            });
+                        }
+                        else {
+                            swal.fire(
+                                'هشدار!',
+                                data.message,
+                                'warning'
+                            );
+                        }
+                    },
+                    error: function (request, status, error) {
+                        alert(request.responseText);
+                    }
+                });
+            })
+        }
+
+    </script>
+
+}
 
