--- a/Endpoint.Site/Areas/Admin/Views/Users/Index.cshtml
+++ b/Endpoint.Site/Areas/Admin/Views/Users/Index.cshtml
@@ -52,7 +52,7 @@
                                                             <td>
 
                                                                 <button class="btn btn-info">ویرایش</button>
-                                                                <button class="btn btn-danger">حذف</button>
+                                                                <button class="btn btn-danger" onclick="DeleteUser(@item.Id)">حذف</button>
                                                                 <button class="btn btn-warning">غیر فعال</button>
                                                             </td>
                                                         </tr>
@@ -77,7 +77,55 @@
 </div>
 @section Scripts
 {
+    <link href="~/Sweetalert2/sweetalert2.min.css" rel="stylesheet" />
+    <script src="~/Sweetalert2/sweetalert2.min.js"></script>
+    <script>
+        function DeleteUser(UserId) {
+            swal.fire({
+                title: 'حذف کاربر',
+                text: 'آیا از حذف این کاربر مطمئن هستید؟',
+                icon: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#d33',
+                cancelButtonColor: '#7cacbe',
+                confirmButtonText: 'بله حذف شود',
+                cancelButtonText: 'خیر'
+            }).then((result) => {
+                var postData = {
+                    'UserId':UserId,
+                };
+                $.ajax({
+                    contentType: 'aplication/x-www-form-urlencoded',
+                    dataType: 'json',
+                    type: "POST",
+                    url: "Delete",
+                    data: postData,
+                    success: function (data) {
+                        if (data.isSuccess == true) {
+                            swal.fire(
+                                'موفق!',
+                                data.message,
+                                'success'
+                            ).then(function (isConfirm) {
+                                location.reload();
+                            });
+                        }
+                        else {
+                            swal.fire(
+                                'هشدار!',
+                                data.message,
+                                'warning'
+                            );
+                        }
+                    },
+                    error: function (request, status, error) {
+                        alert(request.responseText);
+                    }
+                });
+            })
+        }
 
+    </script>
 }
 
 
